--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name="description" content="用Auth0的Universal Login功能，來進行Let's Write的會員註冊、登入"/>
     <meta property="og:description" content="用Auth0的Universal Login功能，來進行Let's Write的會員註冊、登入"/>
     <meta itemprop="description" content="用Auth0的Universal Login功能，來進行Let's Write的會員註冊、登入"/>
-    <meta itemprop="image" content="https://letswritetw.github.io/letswrite-auth0-login/fb.jpg"/>
-    <meta property="og:image" content="https://letswritetw.github.io/letswrite-auth0-login/fb.jpg"/>
+    <meta itemprop="image" content="https://letswritetw.github.io/letswrite-auth0-login/fb.jpg?v=2"/>
+    <meta property="og:image" content="https://letswritetw.github.io/letswrite-auth0-login/fb.jpg?v=2"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
     <meta property="og:image:alt" content="加入 Let's Write 會員"/>
